<resources>
    <string name="app_name">ninemova</string>
    <string name="bottom_menu_home">홈</string>
    <string name="bottom_menu_search">영화 검색</string>
    <string name="bottom_menu_recommend">영화 추천</string>
    <string name="bottom_menu_community">커뮤니티</string>
    <string name="bottom_menu_my_page">마이페이지</string>
    <string name="search_text_hint">제목을 입력해주세요</string>
    <string name="btn_register_comment">한줄평 작성하기</string>
    <string name="login_button_message">로그인</string>
    <string name="login_no_account_message">계정이 없으신가요?</string>
    <string name="login_signup_message">회원가입하기</string>
    <string name="signup_id_hint">ID</string>
    <string name="signup_pw_hint">PassWord</string>
    <string name="signup_pw_valid_hint">PassWord 확인</string>
    <string name="signup_nickname_hint">닉네임</string>
    <string name="signup_button_message">회원가입</string>
    <string name="invalid_password_message">비밀번호가 일치하지 않습니다.</string>
    <string name="insert_comment_dialog_cancel">취소</string>
    <string name="insert_comment_dialog_register">등록</string>
    <string name="insert_comment_dialog_hint">한줄평을 입력하세요.</string>
    <string name="reply_comment_hint">댓글을 달아주세요.</string>
    <string name="loading_message">데이터가 로딩중이에요...\n잠시만 기다려주세요🙏</string>
    <string name="community_info_message">커뮤니티</string>
    <string name="home_popular_movie">인기 컨텐츠</string>
    <string name="home_recent_feed">최근 피드</string>
    <string name="mypage_user_score">평론가 점수</string>
    <string name="mypage_user_tag_title">님의 영화 태그</string>
    <string name="mypage_user_preference">님의 선호 분석</string>
    <string name="mypage_keyword">키워드</string>
    <string name="mypage_genre">장르</string>
    <string name="mypage_actor">배우</string>
    <string name="recommend_title">추천 컨텐츠</string>
    <string name="recommend_movie_ai">취향 저격</string>
    <string name="recommend_new_movie">새로운 시도</string>
</resources>
