<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie"
            type="com.ninemova.domain.data.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_movie_thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:imageUri="@{movie.posterPath}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/movie_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_top"
            app:srb_clearRatingEnabled="true"
            app:srb_clickable="true"
            app:srb_isIndicator="false"
            app:srb_minimumStars="0"
            app:srb_numStars="5"
            app:srb_scrollable="true"
            app:srb_starHeight="30dp"
            app:srb_starPadding="15dp"
            app:srb_starWidth="30dp"
            app:srb_stepSize="0.25" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_movie_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/main_color_1"
            app:boxStrokeWidth="3dp"
            app:endIconDrawable="@drawable/ic_cancel"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_rating_bar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_movie_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_comment_dialog_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/main_color_1"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/insert_comment_dialog_cancel"
            app:layout_constraintEnd_toStartOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_movie_content" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/main_color_1"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/insert_comment_dialog_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_movie_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>