<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ninemova.ui.login.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingHorizontal="15dp"
        tools:context=".ui.login.signup.SignUpFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_id_hint"
                android:inputType="text"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.onTextChanged(`id`, s, start, before, count)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_pw_hint"
                android:inputType="textPassword"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.onTextChanged(`password`, s, start, before, count)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_pw_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_pw"
            app:password="@{viewModel.uiState.password}"
            app:repassword="@{viewModel.uiState.rePassword}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pw_valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_pw_valid_hint"
                android:inputType="textPassword"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.onTextChanged(`repassword`, s, start, before, count)}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_pw_valid">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_nickname_hint"
                android:inputType="text"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.onTextChanged(`nickname`, s, start, before, count)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/main_color_1"
            android:enabled="@{viewModel.uiState.isValidated}"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/signup_buttom_message"
            android:textColor="@color/white"
            app:enabledColor="@{viewModel.uiState.isValidated}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_nickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>