<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ninemova.ui.recommend.RecommendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.recommend.RecommendFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/recommend_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/btn_ai_recommend"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/recommend_movie_ai"
                android:textAlignment="center"
                android:textColor="@drawable/selector_radio_text" />

            <RadioButton
                android:id="@+id/btn_new_world_recommend"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/recommend_new_movie"
                android:textAlignment="center"
                android:textColor="@drawable/selector_radio_text" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_recommend_movie_thumnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="15dp"
                android:backgroundTint="@color/black"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black">

                <ImageView
                    android:id="@+id/iv_recommend_movie_thumnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    app:imageUri="@{viewModel.uiState.selectedMovie.posterPath}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/test_thumbnail" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D000000"
                android:fontFamily="@font/pretendard_bold"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@{viewModel.uiState.selectedMovie.title}"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_movie_release_year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="영화제목" />

            <TextView
                android:id="@+id/tv_movie_release_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D000000"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@{viewModel.uiState.selectedMovie.releaseDate}"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="(2024)" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/main_color_1"
                android:foreground="@drawable/quantum_ic_refresh_white_24"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
